@@ -2131,7 +2131,10 @@ bool TableVal::IsSubsetOf(const TableVal& tv) const
 
 ValPtr TableVal::Default(const ValPtr& index)
 	{
-	const auto& def_attr = GetAttr(detail::ATTR_DEFAULT);
+	auto def_attr = GetAttr(detail::ATTR_DEFAULT);
+
+	if ( ! def_attr )
+		def_attr = GetAttr(detail::ATTR_DEFAULT_INSERT);
 
 	if ( ! def_attr )
 		return nullptr;
@@ -2262,7 +2265,13 @@ ValPtr TableVal::FindOrDefault(const ValPtr& index)
 	if ( auto rval = Find(index) )
 		return rval;
 
-	return Default(index);
+	// If this table has a &default_insert attribute,
+	// insert the default value upon a missed lookup.
+	auto def = Default(index);
+	if ( def && GetAttr(detail::ATTR_DEFAULT_INSERT) )
+		Assign(index, def);
+
+	return def;
 	}
 
 bool TableVal::Contains(const IPAddr& addr) const
@@ -2762,7 +2771,9 @@ void TableVal::InitDefaultFunc(detail::Frame* f)
 	if ( def_val )
 		return;
 
-	const auto& def_attr = GetAttr(detail::ATTR_DEFAULT);
+	auto def_attr = GetAttr(detail::ATTR_DEFAULT);
+	if ( ! def_attr )
+		def_attr = GetAttr(detail::ATTR_DEFAULT_INSERT);
 
 	if ( ! def_attr )
 		return;
