@@ -375,6 +375,7 @@ when	return TOK_WHEN;
 &add_func	return TOK_ATTR_ADD_FUNC;
 &create_expire	return TOK_ATTR_EXPIRE_CREATE;
 &default	return TOK_ATTR_DEFAULT;
+&default_insert	return TOK_ATTR_DEFAULT_INSERT;
 &delete_func	return TOK_ATTR_DEL_FUNC;
 &deprecated	return TOK_ATTR_DEPRECATED;
 &raw_output	return TOK_ATTR_RAW_OUTPUT;
