@@ -1,0 +1,10 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+copy_tbl[0], no-default
+copy_tbl[1], <default>
+copy_tbl, {
+[0] = no-default,
+[1] = <default>
+}
+tbl, {
+[0] = no-default
+}
