@@ -1,0 +1,3 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+error in string and <...>/table-default-insert-errors.zeek, line 2: arithmetic mixed with non-arithmetic (string and 1)
+error in <...>/table-default-insert-errors.zeek, line 2: &default_insert value has inconsistent type (&default_insert=1)
