@@ -1,0 +1,2 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+error in <...>/table-default-insert-errors.zeek, line 3: &default and &default_insert cannot be used together (&default=a, &default_insert=b)
