@@ -1,0 +1,28 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+table[count] of R
+===
+<default>
+{
+[0] = <default>
+}
+===
+[a, b]
+[a, b]
+{
+[0] = [a, b, c],
+[1] = [a, b, d]
+}
+===
+[a=0]
+[a=1]
+{
+[0] = [a=0],
+[1] = [a=1]
+}
+===
+[a=0]
+[a=1]
+{
+[0] = [a=0],
+[1] = [a=1]
+}
