@@ -31,6 +31,11 @@ New Functionality
   the break statement within ``assertion_failure()`` or ``assertion_result()``
   allows to suppress the default message.
 
+- Add a new ``&default_insert`` attribute for tables. This behaves as ``&default``
+  with the addition that the default value is inserted into the table upon a
+  failed lookup. Particularly for tables with nested container values, the
+  ``&default`` behavior of not inserting the value little useful.
+
 - The ``from_json()`` function now takes an optional key_func argument to
   normalize JSON object key names. This can be useful if the keys in a JSON
   object are not valid Zeek identifiers or reserved keywords.
